content/docs/usecases/coding/cka-practice-cluster-kind-calico/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny-ingress, namespace: np-test }
spec:
  podSelector: {}
  policyTypes: [Ingress]
